# plantgen

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  Interconnect.uml  README.md  build.ninja  configure  doc_config
codegen_project/: .cproject  .project
documentation/: doc_config
example/: bus.uml  interconnect.uml  plugin.h  plugin.uml  workers.uml
include/: helper.hpp  reader.hpp  style.hpp  writer.hpp
src/: codegen.cpp  helper.cpp  reader.cpp  style.cpp  writer.cpp
src/application/: CMakeLists.txt  plantgen.cpp
src/common/: CMakeLists.txt  common.h
src/lib/reader/: CMakeLists.txt  reader.cpp  reader.h
src/lib/writer/: CMakeLists.txt  writer.cpp  writer.h
